# cdk

./: .gitignore  .golangci.yml  .mockery.yaml  .mockery.yml  Cargo.toml  Dockerfile  Makefile  README.md  book.toml  cover.out  coverage.out  go.mod  go.sum  logerror  main.go  sonar-project.properties  tmp.sqlite  tmp.sqlite-journal  version.go  version_test.go
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  test-e2e.yml
agglayer/: client.go  client_test.go  errors_test.go  mock_agglayer_client.go  proof_generation_error.go  proof_verification_error.go  type_conversion_error.go  types.go  types_helpers_test.go  types_test.go
aggoracle/: config.go  e2e_test.go  mock_ethtxmanager_test.go  oracle.go
aggregator/: agglayer_client.go  agglayer_tx.go  aggregator.go  aggregator_test.go  config.go  interfaces.go  profitabilitychecker.go
aggsender/: aggsender.go  aggsender_test.go  block_notifier_polling.go  block_notifier_polling_test.go  config.go  epoch_notifier_per_block.go  epoch_notifier_per_block_test.go  generic_subscriber_impl.go  mock_eth_client.go  mock_l1infotree_syncer.go  mock_l2bridge_syncer.go  mock_logger.go
bridgesync/: bridge_contract.go  bridge_contract_test.go  bridgesync.go  bridgesync_test.go  claimcalldata_test.go  config.go  docker-compose.yml  downloader.go  e2e_test.go  mock_l2_test.go  processor.go  processor_test.go  test_db_path-shm  test_db_path-wal  tree.go  tree_test.go
cdk/: Cargo.toml  client.go
cdk-erigon/: Cargo.toml
claimsponsor/: claimsponsor.go  e2e_test.go  evmclaimsponsor.go
cmd/: config.go  main.go  run.go  version.go
common/: common.go  common_test.go  components.go  config.go
config/: config.go  config_render.go  config_render_test.go  config_test.go  default.go  example-config.toml  network.go
crates/cdk/: Cargo.toml  build.rs  versions.json
crates/cdk-config/: Cargo.toml
crates/cdk-config/src/: aggregator.rs  execution_engine.rs  l1.rs  layer1.rs  lib.rs  network_config.rs  sequence_sender.rs  telemetry.rs
crates/cdk/src/: allocs_render.rs  cli.rs  config_render.rs  helpers.rs  logging.rs  main.rs  versions.rs
dataavailability/: dataavailability.go  interfaces.go
db/: interface.go  logger.go  meddler.go  migrations.go  sqlite.go  tx.go
docs/: SUMMARY.md  da_integration.md  getting_started.md  local_debug.md  non_evm_integration.md
downloader/: downloader.go
driver/: driver.go
encoding/: encoding.go
etherman/: aggregator.go  config.go  contracts.go  errors.go  errors_test.go  etherman.go  simulated.go  types.go
etherman2/: builder.go  builder_contracts.go  builder_eth2.go  errors.go  interface.go  interface_contracts.go
ethtxmanager/: config.go  ethtxmanager.go  memstorage.go  monitoredtx_test.go
executionlayer/: executionlayer.go
hex/: hex.go
(+496 files in other folders)
