[workspace]
resolver = "2"
default-members = ["crates/cdk"]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.10.0"
thiserror = "1.0.64"
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
ethers = "2.0.14"
jsonrpsee = { version = "0.24.5", features = ["full"] }

