[package]
name = "cdk-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
ethers.workspace = true
jsonrpsee.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
toml.workspace = true

[features]
default = []
testutils = []
