[package]
name = "cdk"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenvy = "0.15.7"
execute = "0.2.13"
toml = "0.8.14"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
url = { workspace = true, features = ["serde"] }
colored = "2.0"
cdk-config = { path = "../cdk-config" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3.12.0"
alloy-rpc-client = "0.5.4"
alloy-transport-http = "0.5.4"
tokio = "1.40.0"
alloy-json-rpc = "0.5.4"

[build-dependencies]
reqwest = {version = "0.12.8", features = ["blocking"]}
serde_json.workspace = true
regex = "1.11.1"
